<resources>
    <string name="app_name">My Story</string>
    <string name="empty_password">Can not be empty</string>
    <string name="password_6_character">Insert Your Password More Than 6 Character</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">register now!</string>
    <string name="welcome_title">Let\'s create a story today</string>
    <string name="description">Login to unlock the full experience</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="account">don\'t have an account?</string>
    <string name="description2">Register to unlock the full experience</string>
    <string name="registerbutton">Register</string>
    <string name="name_title">Name</string>
    <string name="name_hint">name</string>
    <string name="setting_menu">setting</string>
    <string name="account_profile">profile account</string>
    <string name="logout">logout</string>
    <string name="upload_button">upload button</string>
    <string name="button_camera">camera</string>
    <string name="button_gallery">gallery</string>
    <string name="button_upload">upload</string>
    <string name="Descrip">Description</string>
    <string name="create_from">created from : </string>
    <string name="app_name2">MY STORY</string>
    <string name="message_logout">want to leave the program?</string>
    <string name="action_logout">logout</string>
    <string name="action_cancel">Cancel</string>
    <string name="alert_email">Enter your email before login</string>
    <string name="empty_email">Invalid email</string>
    <string name="alert_password">Cannot be less than 8 characters</string>
    <string name="massage_email">Please fill in your email</string>
    <string name="massage_password">Please fill in your password</string>
    <string name="massage_name">Please fill in your name</string>
    <string name="thumbnail">thumbnail</string>
    <string name="back_to_login_description">back to login</string>
    <string name="logo_description">my story app logo</string>
    <string name="description_description">enter a description for your upload</string>
    <string name="retry">retry</string>
    <string name="maps">maps</string>
</resources>