<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.login.LoginRoom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/layout_login_info"
            android:layout_width="416dp"
            android:layout_height="733dp"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="-5dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_storyapp"
                android:alpha="0"
                tools:alpha="500"
                android:transitionName="profile" />

            <TextView
                android:id="@+id/tv_Welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_title"
                android:textSize="24sp"
                android:alpha="0"
                tools:alpha="500"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/description"
                android:alpha="0"
                tools:alpha="500"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_title"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                android:alpha="0"
                tools:alpha="500"
                app:layout_constraintTop_toBottomOf="@+id/tv_Description" />

            <com.tugas.submissionawal.customview.EmailActivity
                android:id="@+id/edt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:translationZ="0dp"
                android:textColor="@color/black"
                android:alpha="0"
                tools:alpha="500"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/tv_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/password_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                android:alpha="0"
                tools:alpha="500"
                app:layout_constraintTop_toBottomOf="@id/edt_Email" />

            <com.tugas.submissionawal.customview.PasswordActivity
                android:id="@+id/edt_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/black"
                android:alpha="0"
                tools:alpha="500"
                android:translationZ="0dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/background_button"
                android:text="@string/login"
                android:translationZ="0dp"
                android:alpha="0"
                tools:alpha="500"
                app:backgroundTint="@null" />

            <LinearLayout
                android:id="@+id/layoutTextRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    tools:alpha="500"
                    android:text="@string/account" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/register"
                    android:textColor="@color/orange"
                    android:alpha="0"
                    tools:alpha="500"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>