<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_thumbnail"
            android:layout_width="409dp"
            android:layout_height="277dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/thumbnail" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="405dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/image_thumbnail"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="@+id/image_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/image_thumbnail">

            <TextView
                android:id="@+id/create"
                android:layout_width="131dp"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:text="@string/create_from"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_name"
                android:transitionName="name"
                android:layout_width="147dp"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="322dp"
            android:layout_height="92dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/Descrip"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>